# lingmo-first-setup

./: CMakeLists.txt
debian/: changelog
src/: main.cpp  resources.qrc  setup.cpp  setup.h  version.cpp  version.h
src/qml/: DesktopView.qml  DonePage.qml  FirstPage.qml  HomePage.qml  RoundedItem.qml  SecondPage.qml  SystemLogo.qml  UserAssets.qml  UserInfo.qml  main.qml
translations/: en_US.qm  en_US.ts  zh_CN.qm
